# eventsensor

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: validate.yaml
custom_components/eventsensor/: __init__.py  common.py  config_flow.py  manifest.json  sensor.py  strings.json
custom_components/eventsensor/.translations/: en.json
custom_components/eventsensor/translations/: en.json  sk.json
