[tool.poetry]
name = "eventsensor"
version = "3.3.0"
description = "HomeAssistant custom sensor to track specific events"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/azogue/eventsensor"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
homeassistant = ">=2023.8.0"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.2.0"

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line_length = 88
target_version = ["py311"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
