[project]
name = "eventsensor"
version = "3.4.0"
description = "HomeAssistant custom sensor to track specific events"
authors = [{ name = "Eugenio Panadero", email = "eugenio.panadero@gmail.com" }]
requires-python = ">=3.13,<4.0"
license = "MIT"
readme = "README.md"
dependencies = ["homeassistant>=2025.2.0"]

[project.urls]
Repository = "https://github.com/azogue/eventsensor"

[dependency-groups]
dev = ["pre-commit>=2.2.0"]

[tool.ruff]
target-version = "py313"
fix = true
line-length = 88

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
